--- a/src/styles/components/general-settings.css
+++ b/src/styles/components/general-settings.css
@@ -87,6 +87,9 @@
   display: flex;
   align-items: center;
   min-height: 40px;
+  width: 100%;
+  position: relative;
+  z-index: 1;
 }
 
 .general-header-content {
@@ -638,7 +641,7 @@ body .general-setting-control .p-checkbox .p-checkbox-box[style*="background"] {
   }
 
   .general-header {
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
 
   .general-header-icon {
